# integrations-take-home

./: .pre-commit-config.yaml  README.md  alembic.ini  pyproject.toml
migrations/: env.py
migrations/versions/: 2024_03_21_0012-ef7df34a4d8c_initial_migration.py
src/integrations_take_home/: fetch_and_store.py  main.py  models.py  utils.py
